--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,5 +1,7 @@
 @import 'vars';
 @import 'global';
+@import 'fonts';
+
 
 
 // font-family: 'Raleway', sans-serif;
@@ -444,6 +446,172 @@
   display: block;
 }
 
+// ********footer******
+.footer {
+  &__content {   
+    background-color: $bg;
+  }
+  &__inner {
+     display: flex;
+    justify-content: space-between;
+    padding: 100px 0px 80px;
+  }
+}
+
+.footer__col {
+  max-width: 270px;
+  width: 100%;
+  &-title {
+    padding-bottom: 25px;
+    margin-bottom: 30px;
+    color: #ffffff;
+    font-family: 'Raleway', sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 24px;
+    position: relative;
+    &::after {
+      position: absolute;
+      content: '';
+      bottom: 0;
+      left: 2px;
+      width: 50px;
+      height: 3px;
+      background-color: $green;
+    }
+  }
+  &-text {
+    color: #b7c3c8;    
+    margin-bottom: 30px;
+  } 
+  &-menu {
+    max-width: 220px;
+    width: 100%;
+  }   
+}
+
+.footer__info {
+  padding-left: 30px;
+  color: #ffffff;
+  font-family: 'Lato', sans-serif;
+  font-size: 14px;  
+  line-height: 24px;
+  margin-top: 18px;
+  font-weight: 500;
+  position: relative;
+  &::before {
+    position: absolute;
+    content: '\f041';
+    font-size: 18px;    
+    left: 0;
+    font-family: 'icomoon';
+    color: $green;
+  }
+}
+.footer-phone {
+  &::before {    
+    content: '\f095';    
+  }  
+}
+.footer__col-list {
+  a {
+    padding-left: 22px;
+    margin-bottom: 13px;
+    color: #b7c3c8;
+    position: relative;
+    &::before {
+      position: absolute;
+      content: '\f105';
+      font-size: 18px;
+      left: 0;
+      font-family: 'icomoon';
+      color: $green;
+    }    
+  }
+}
+.footer__social-link {
+  li {
+    display: inline-block;
+    & + li {
+      margin-left: 6px;
+    }
+  }  
+  margin-bottom: 33px;
+  a {
+    width: 28px;
+    height: 28px;
+    background-image: url(../images/content/css_sprites.png);
+   
+  }
+}
+.link-fb {
+  background-position: -0 -28px;
+}
+.link-tw {
+  background-position: -28px 0;
+}
+.link-yt {
+  background-position: -28px -28px;
+}
+.link-pin {
+  background-position: -56px 0px;
+}
+.link-lin {
+  background-position: 0px 0;
+}
+.footer__form {
+  position: relative;
+  &-title {
+    color: #ffffff;    
+    font-size: 20px;    
+    margin-bottom: 20px;
+  } 
+  input {
+    border:none;
+    background-color: #2f3c43;
+    display: block;
+    width: 100%;
+    height: 40px;
+    color: #fff;
+    font-size: 14px;
+    padding-left: 12px;
+    padding-right: 50px;
+    &::placeholder {
+      color: #697378;
+    }
+  }
+  button {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border: none;
+    height: 40px;
+    width: 43px;
+    background-color: $green;
+    cursor: pointer;
+    &::before {
+      position: absolute;
+      content: '\f124';
+      font-size: 20px;
+      left: 12px;
+      top: 8px;
+      font-family: 'icomoon';
+      color: #fff;
+    }
+  }
+}
+
+
+.footer__copy {
+  border-top: 1px solid #424d53;
+}
+
+.footer__copy-text {
+  padding: 25px 0px;
+  text-align: center;
+  color: #919699;
+  line-height: 36px;
+}
 
 
 
