--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,7 @@
 
 
 
+
 // font-family: 'Raleway', sans-serif;
 // font-family: 'Lato', sans-serif;
 
@@ -86,6 +87,15 @@
   background-size: cover;
   background-position: center;
   min-height: 530px;
+  &.page-search {
+    min-height: 230px;
+    .search__inner {
+      padding: 55px 0px 70px;
+      &-text {
+        margin-bottom: 30px;        
+      }
+    }
+  }
 }
 .search__inner {
   text-align: center;
@@ -123,20 +133,21 @@
         color: #90a4ae;        
       }
     }
-    button {
+    button {         
       position: absolute;
       border: none;
       background-color: transparent;
       right: 20px;
       top: 17px;
+      cursor: pointer;
     }
 
   }
 }
 // ********products******
 .products {
-  padding: 110px 0 ;
-   background-color: #f4f6f5;
+  padding: 100px 0 ;
+  background-color: #f4f6f5;
 }
 .products__inner-btn {
   text-align: center;
@@ -146,7 +157,7 @@
     padding: 13px 27px;
     border: none;
     outline: none;
-    background-color: #eeebeb;
+    background-color: #fff;
     color: $bg;
     font-size: 14px;    
     cursor: pointer;
@@ -277,7 +288,8 @@
 // ********product-slider******
 
 .product-slider {
-  padding: 50px 0px 120px;
+    padding-top: 100px;
+    padding-bottom: 120px;
   .slick-dots {
     margin-top: 50px;
     text-align: center;
@@ -390,8 +402,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 215px;
-    max-width: 600px;
+    min-height: 200px;
+    max-width: 585px;
     width: 100%;
     background-color: $green;
   }
@@ -401,15 +413,15 @@
     line-height: 30px;
     margin-right: 45px;
     max-width: 260px;
-    line-height: 36px;
+    
     span {
       font-weight: 700; 
     }
   }
   &__link {    
     font-size: 18px;
-    line-height: 36px;
-    padding: 14px 40px;
+    
+    padding: 14px 30px;
     background-color: #fff;
   }
 
@@ -439,7 +451,7 @@
     font-size: 24px;
     font-weight: 700;    
     color: $bg;
-    background-color: #eeebeb;;
+    background-color: #f8f8f8;;
   }
 }
 .tutorial__link {
@@ -540,8 +552,7 @@
   a {
     width: 28px;
     height: 28px;
-    background-image: url(../images/content/css_sprites.png);
-   
+    background-image: url(../images/content/css_sprites.png);  
   }
 }
 .link-fb {
@@ -601,22 +612,180 @@
   }
 }
 
-
 .footer__copy {
   border-top: 1px solid #424d53;
+  &-text {
+    padding: 25px 0px;
+    text-align: center;
+    color: #919699;
+    line-height: 36px;
+    }
 }
 
-.footer__copy-text {
-  padding: 25px 0px;
+// ********product-page******
+.product-page__inner {
+  display: flex;  
+}
+.product-page__aside {
+  // margin-right: 30px;
+  margin-right: 0px;
+}
+
+.aside__item {
+  padding: 0px 30px 30px 30px;
+  margin-bottom: 30px;
+  width: 270px;
+  background-color: #fff;
+  border: 1px solid #d7d7d7;  
+}
+.aside__title {
+  font-size: 20px;
+  font-weight: 700;
+  padding: 20px 0px 20px;
+  color: $bg;
+  border-bottom: 1px solid #dde3e8;
+}
+.category__list {
+  padding-top: 10px;
+  li {
+    padding: 10px 0px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    padding-left: 20px;
+    &::before {
+      position: absolute;
+      content: '\f105';
+      font-size: 18px;
+      left: 0;
+      font-family: 'icomoon';
+      color: #8bc34a;
+    }
+  }
+  a {
+    font-size: 15px;
+    color: $bg;
+  }
+  span { 
+    color: #90a4ae;
+  }
+}
+.price__range {
   text-align: center;
-  color: #919699;
-  line-height: 36px;
+  form {
+    padding-top: 20px;
+    padding-bottom: 25px; 
+    position: relative;
+    button {
+      padding: 17px 10px;
+      margin-top: 55px;
+      border: none;
+      outline: none;
+      color: #ffffff;
+      font-weight: 500;
+      background-color: $green;
+      text-align: center;
+      width: 100%;
+      display: block;
+      cursor: pointer;
+      position: relative;
+      &::before {
+        position: absolute;
+        content: "\f002";
+        font-size: 15px;
+        left: 55px;
+        top: 16px;
+        font-family: 'icomoon';
+        color: #ffffff;       
+        
+      }
+    }   
+  }
+}
+.irs-min,
+.irs-max {
+  display: none;
+}
+.irs--flat .irs-line {
+  top: 20px;
+  height: 5px;
+  background-color:  #f2f5f8;
+  border-radius: 0px;
+}
+.irs--flat .irs-bar {
+  top: 20px;
+  height: 5px;
+  background-color: #37474f;
+}
+.irs--flat .irs-handle {
+  top: 15px;
+  width: 16px;
+  height: 16px;
+  border: 3px solid #8bc34a;
+  border-radius: 50%;
+  background-color: #ffffff;
+}
+.irs--flat .irs-handle>i:first-child {
+  display: none;
+}
+.irs--flat .irs-from, .irs--flat .irs-single, .irs--flat .irs-to {  
+  top: 45px;  
+  background-color: transparent;  
+  color: #78909c;
+  font-size: 15px;
+  &::before {
+    display: none;
+  }
+
+}
+.product-page__aside {
+  .product__item-img {
+    min-height: 120px;    
+  }
+  .product__item {
+    width: 100%;
+    border: none;
+    box-shadow: none;
+    margin-bottom: 25px;    
+    &-info {
+      padding: 20px 0px 25px;
+      border-bottom: 1px solid #dde3e8;      
+    }
+    &-title {
+      font-weight: 700;
+    }
+    &-content {
+      padding: 20px 0px 15px;
+      border-bottom: none;
+
+    }
+    .rate-star {
+      margin-right: 0;
+      } 
+
+  }
+  .top-sellers__link {
+    padding: 17px 10px;
+    margin-top: 55px;
+    border: none;
+    outline: none;
+    color: #ffffff;
+    font-weight: 500;
+    margin-top: 25px;   
+    text-align: center;
+    display: block;
+    width: 100%;
+    background-color: $green;
+  }
 }
 
 
 
-
-
+.product-page__items {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 
 
 
