--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -458,6 +458,385 @@
   display: block;
 }
 
+// ********product-page******
+
+.product-page {
+  padding-bottom: 100px;
+}
+
+.product-page__inner {
+  display: flex;   
+}
+
+// ********product-page aside__item ******
+.product-page__aside {
+  // margin-right: 30px;
+  margin-right: 0px;
+}
+
+.aside__item {
+  padding: 0px 30px 30px 30px;
+  margin-bottom: 30px;
+  width: 270px;
+  background-color: #fff;
+  border: 1px solid #d7d7d7;  
+}
+.aside__title {
+  font-size: 20px;
+  font-weight: 700;
+  padding: 20px 0px 20px;
+  color: $bg;
+  border-bottom: 1px solid #dde3e8;
+}
+.category__list {
+  padding-top: 10px;
+  li {
+    padding: 10px 0px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    padding-left: 20px;
+    &::before {
+      position: absolute;
+      content: '\f105';
+      font-size: 18px;
+      left: 0;
+      font-family: 'icomoon';
+      color: #8bc34a;
+    }
+  }
+  a {
+    font-size: 15px;
+    color: $bg;
+  }
+  span { 
+    color: #90a4ae;
+  }
+}
+.price__range {
+  text-align: center;
+  form {
+    padding-top: 20px;
+    position: relative;
+    button {
+      padding: 17px 10px;
+      margin-top: 55px;
+      border: none;
+      outline: none;
+      color: #ffffff;
+      font-weight: 500;
+      background-color: $green;
+      text-align: center;
+      width: 100%;
+      display: block;
+      cursor: pointer;
+      position: relative;
+      &::before {
+        position: absolute;
+        content: "\f002";
+        font-size: 15px;
+        left: 55px;
+        top: 16px;
+        font-family: 'icomoon';
+        color: #ffffff;       
+        
+      }
+    }   
+  }
+}
+.irs-min,
+.irs-max {
+  display: none;
+}
+.irs--flat .irs-line {
+  top: 20px;
+  height: 5px;
+  background-color:  #f2f5f8;
+  border-radius: 0px;
+}
+.irs--flat .irs-bar {
+  top: 20px;
+  height: 5px;
+  background-color: #37474f;
+}
+.irs--flat .irs-handle {
+  top: 15px;
+  width: 16px;
+  height: 16px;
+  border: 3px solid #8bc34a;
+  border-radius: 50%;
+  background-color: #ffffff;
+}
+.irs--flat .irs-handle>i:first-child {
+  display: none;
+}
+.irs--flat .irs-from, .irs--flat .irs-single, .irs--flat .irs-to {  
+  top: 45px;  
+  background-color: transparent;  
+  color: #78909c;
+  font-size: 15px;
+  &::before {
+    display: none;
+  }
+
+}
+.product-page__aside {
+  .product__item-img {
+    min-height: 120px;    
+  }
+  .product__item {
+    width: 100%;
+    border: none;
+    box-shadow: none;
+    margin-bottom: 30px;    
+    border-bottom: 1px solid #dde3e8;
+    &-info {
+      padding: 2px 0px 25px;            
+    }
+    &-title {
+      font-size: 16px;
+      font-weight: 700;
+    }
+    &-content {
+      min-height: 0px;
+      padding: 20px 0px 15px;
+      border-bottom: none;
+    }
+    &-price {
+      font-size: 16px;
+    }
+    
+    .rate-star {
+      margin-right: 0;
+      } 
+
+  }
+  .top-sellers__link {
+    padding: 17px 10px;
+    margin-top: 55px;
+    border: none;
+    outline: none;
+    font-weight: 500;
+    margin-top: 25px;   
+    text-align: center;
+    display: block;
+    width: 100%;
+    background-color: $green;
+    color: #fff;
+  }
+}
+// ********product-page content ******
+.product-page__content {
+  width: 100%;
+}
+.product-page__filter {
+  padding: 23px 25px 25px 20px;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #fff;
+  border: 1px solid #d7d7d7;
+  align-items: center;
+  button {
+    background-color:transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    color: #90a4ae;
+    outline: none;
+    &.active {
+      color: $green;
+    }
+  } 
+}
+.product-page__filter-sort {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: #707070;
+}
+.product-page__filter-list {
+  display: flex;
+  align-items: center;
+}
+
+button.icon-sort-amount-desc {
+  font-size: 18px;
+  color: #455a64;
+}
+button.icon-sort {
+  font-size: 14px;
+  color: #707070;
+}
+
+button.icon-th-list {
+  color: #90a4ae;
+}
+
+
+.product-page__content {
+  .product__item {
+  max-width: 19vw;
+  margin-bottom: 30px;
+  background-color: #fff;
+  transition: $trans;
+    &-img {
+      min-height: 180px;
+    }
+    .product__item-content {
+      padding: 10px 20px;     
+    }
+    .product__item-title {
+      font-size: 16px;
+    }
+    .product__item-info  {
+      padding: 20px 20px;    
+    }
+    .rate-star {    
+      margin-right: 5px;
+    }
+  }  
+}
+.product-page__items {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap; 
+}
+.pagination__list {
+  margin-top: 30px;
+  display: flex;
+  li {    
+    display: inline-block;    
+    & + li {      
+      margin-left: 8px;    
+  }
+  }
+  a,
+  span {    
+    display: flex;      
+    justify-content: center;
+    align-items: center;
+    width: 43px;
+    height: 38px;
+    background-color: #fff;
+    box-shadow: 0 1px 2px rgba(205, 214, 222, 0.75);
+    font-size: 16px;
+    font-weight: 500;    
+    color: $bg;
+    &.active, 
+    span {
+      background-color: $orange;
+      color: #ffffff;
+    }
+  }  
+}
+.product__item-text {
+  display: none;
+}
+.product__item-price {
+  text-align: right;
+  span {
+    display: none;
+  }
+}
+.product__item-list {
+  display: none;
+  position: relative;
+    .icon-heart-o {
+    &:before {
+      top: 5px;
+      position: absolute;
+      left: 15px;
+      color: $green;          
+      font-size: 16px;       
+         
+    }
+  }
+  
+  .icon-heart-o,
+  .icon-comment-o {  
+    display: inline-block;
+    font-size: 12px;
+    color: $bg;  
+    padding-left: 50px;
+    border-left: 1px solid #aeb4bb; 
+  }
+  .icon-comment-o {
+    padding-right: 35px;
+    padding-left: 50px;
+    &:before {
+      top: 5px;
+      position: absolute;
+      right: 37px;
+      color: $green;          
+      font-size: 16px;       
+         
+    }
+  }
+   
+  
+}
+
+
+
+
+.page-list {
+  &.list {
+    box-shadow:none;
+    max-width: 100%;
+    .product__item-img  {
+     width: 240px;
+     float: left; 
+    }
+    .product__item-name {
+      max-width: 100%;
+    }
+    .product__item-content {
+      padding: 15px 30px;
+  }
+    .product__item-text {
+      display: block;
+      color: #70838d;
+      font-size: 14px;
+      line-height: 18px;
+    }
+    .product__item-category {
+      margin-bottom: 10px;
+    }
+    .product__item-price {
+      span {
+        display: block;
+        color: #aeb4bb;
+        font-size: 13px;
+        margin-top: 30px;
+      }
+    }
+    .product__item-info {
+      padding: 10px 30px;
+    }
+    .product__item-list {
+      display: block;
+     
+    }
+    .product__item-star {
+      margin-left: auto;
+      margin-right: 30px; 
+    }
+    
+  }
+  
+}
+.page-list:nth-child(n+8) {
+  &.list {
+    display: none;
+  }  
+  
+}
+// **************************
+
+
+
+
 // ********footer******
 .footer {
   &__content {   
@@ -621,174 +1000,6 @@
     line-height: 36px;
     }
 }
-
-// ********product-page******
-.product-page__inner {
-  display: flex;  
-}
-.product-page__aside {
-  // margin-right: 30px;
-  margin-right: 0px;
-}
-
-.aside__item {
-  padding: 0px 30px 30px 30px;
-  margin-bottom: 30px;
-  width: 270px;
-  background-color: #fff;
-  border: 1px solid #d7d7d7;  
-}
-.aside__title {
-  font-size: 20px;
-  font-weight: 700;
-  padding: 20px 0px 20px;
-  color: $bg;
-  border-bottom: 1px solid #dde3e8;
-}
-.category__list {
-  padding-top: 10px;
-  li {
-    padding: 10px 0px;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    padding-left: 20px;
-    &::before {
-      position: absolute;
-      content: '\f105';
-      font-size: 18px;
-      left: 0;
-      font-family: 'icomoon';
-      color: #8bc34a;
-    }
-  }
-  a {
-    font-size: 15px;
-    color: $bg;
-  }
-  span { 
-    color: #90a4ae;
-  }
-}
-.price__range {
-  text-align: center;
-  form {
-    padding-top: 20px;
-    padding-bottom: 25px; 
-    position: relative;
-    button {
-      padding: 17px 10px;
-      margin-top: 55px;
-      border: none;
-      outline: none;
-      color: #ffffff;
-      font-weight: 500;
-      background-color: $green;
-      text-align: center;
-      width: 100%;
-      display: block;
-      cursor: pointer;
-      position: relative;
-      &::before {
-        position: absolute;
-        content: "\f002";
-        font-size: 15px;
-        left: 55px;
-        top: 16px;
-        font-family: 'icomoon';
-        color: #ffffff;       
-        
-      }
-    }   
-  }
-}
-.irs-min,
-.irs-max {
-  display: none;
-}
-.irs--flat .irs-line {
-  top: 20px;
-  height: 5px;
-  background-color:  #f2f5f8;
-  border-radius: 0px;
-}
-.irs--flat .irs-bar {
-  top: 20px;
-  height: 5px;
-  background-color: #37474f;
-}
-.irs--flat .irs-handle {
-  top: 15px;
-  width: 16px;
-  height: 16px;
-  border: 3px solid #8bc34a;
-  border-radius: 50%;
-  background-color: #ffffff;
-}
-.irs--flat .irs-handle>i:first-child {
-  display: none;
-}
-.irs--flat .irs-from, .irs--flat .irs-single, .irs--flat .irs-to {  
-  top: 45px;  
-  background-color: transparent;  
-  color: #78909c;
-  font-size: 15px;
-  &::before {
-    display: none;
-  }
-
-}
-.product-page__aside {
-  .product__item-img {
-    min-height: 120px;    
-  }
-  .product__item {
-    width: 100%;
-    border: none;
-    box-shadow: none;
-    margin-bottom: 25px;    
-    &-info {
-      padding: 20px 0px 25px;
-      border-bottom: 1px solid #dde3e8;      
-    }
-    &-title {
-      font-weight: 700;
-    }
-    &-content {
-      padding: 20px 0px 15px;
-      border-bottom: none;
-
-    }
-    .rate-star {
-      margin-right: 0;
-      } 
-
-  }
-  .top-sellers__link {
-    padding: 17px 10px;
-    margin-top: 55px;
-    border: none;
-    outline: none;
-    color: #ffffff;
-    font-weight: 500;
-    margin-top: 25px;   
-    text-align: center;
-    display: block;
-    width: 100%;
-    background-color: $green;
-  }
-}
-
-
-
-.product-page__items {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-
-
 
 
 
