--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -3,4 +3,6 @@ $orange:#e74c3c;
 $green: #8bc34a;
 $bg: #263238;
 $grey: #f4f6f5;
-$trans: 0.4s ease-out;
+$yellow: #fcb322;
+$tomato:  #ef6c00; 
+$trans: 0.5s ease-out;
