--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -112,3 +112,15 @@ input {
    
   }
 }
+.angle-right {
+  position: relative;
+  padding-left: 15px;
+  &::before {
+    position: absolute;
+    content: '\f105';
+    font-size: 14px;    
+    left: 0;
+    font-family: 'icomoon';
+    color: $green;
+  }
+}
