--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -27,6 +27,14 @@
   } 
 }
 }
+@media (max-width: 960px) {
+  .contact__box {
+  display: flex;
+  flex-wrap: wrap;
+}
+}
+
+
 
 @media (max-width: 860px) {
   .header {
@@ -73,6 +81,67 @@
       top: 77px;
     }
   }
+  .page-404__inner {    
+    padding-bottom: 60px;    
+}
+  .page-404__404 {
+    padding-top: 43px;   
+    font-size: 230px;
+    line-height: 200px;  
+    &::after {
+      content: ""; 
+      
+      height: 292px;
+      width: 150px;
+      margin-left: 25px; 
+    } 
+  }
+  .breadcrumbs__inner {
+    padding: 20px 0px 20px;
+}
+  .contact__page {
+    margin-bottom: 30px;
+  }
+  .contact__inner {
+    padding: 20px 25px 15px;
+}
+  .contact__head {
+    padding: 15px;
+    font-size: 20px;
+  }
+  .contact__map {
+    margin-bottom: 25px;
+}
+.contact__info-item {
+  margin-bottom: 20px;
+}
+.contact__info-title { 
+  padding-left: 30px;
+  font-size: 20px;
+  margin-bottom: 10px;
+  padding-bottom: 10px;  
+}
+.contact__form-row {
+  margin-bottom: 15px;
+}
+.contact__form input {
+  width: 47%;
+  height: 35px;
+  padding-left: 17px;
+  padding-right: 17px;
+  display: inline-block;
+  background-color: #f1f4f5;
+  border: none;
+}
+.contact__form textarea {
+  height: 135px;
+}
+.contact__btn {
+  padding: 14px 20px;
+ 
+}
+
+
 }
 
 
@@ -89,14 +158,44 @@
     .footer__col{  
       margin-top: 35px;    
       max-width: 45%;
+    }
   }
+  .page-404__wrapper,
+  .about__wrapper {
+    margin-bottom: 0px;
   }
+  
+  .page-404__404 {           
+    &::after {
+     display: none
+    } 
+  }
+  .about__inner {
+    padding-top: 20px;
+    padding-bottom: 25px;
+  } 
+  .about__content {
+    margin-bottom: 20px;
+    padding-left: 25px;
+    padding-right: 35px;
+  } 
+  .about__title {
+    margin-bottom: 25px;
+    color: #444444;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24px;
+  } 
 }
+
+
+
 @media (max-width: 610px) {
   .message__box,
   .note__box {
     display: none;
   } 
+ 
 }
 
 
@@ -166,13 +265,13 @@
   }
   .basket__box:hover .basket__menu  {
     top: 50px;
-}
+  }
   .header__top {
     height: auto;
     flex-direction: column;     
     align-items: center;      
     margin-top: 15px;
-     
+      
   }
   .header__btn {  
     margin-top: 15px; 
@@ -198,12 +297,85 @@
   .basket__menu {  
     top: 10px;
   }
+  .page-404__404 {    
+    font-size: 140px;
+    line-height: 140px;
+    font-weight: 800;     
+    &::after {
+      display: none
+    } 
+  }
+  .page-404__content {
+    padding-left: 25px;
+    padding-right: 25px;
+  } 
+
+  .page-404__wrapper {    
+    margin-bottom: 0px; 
+  }
+  .page-404__title {
+    margin-top: 25px;    
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 1px;
+    margin-bottom: 20px;
+  }
+  .page-404__text {    
+    margin-bottom: 30px;
+    font-size: 16px;   
+  }
+  .breadcrumbs__inner {
+    padding: 30px 0px 30px;
+  }
+  .page-404__wrapper .page-404__head {
+    padding: 20px;    
+    font-size: 20px;        
+  }
+  .page-404__link {
+    padding: 12px 17px;    
+    font-size: 12px;    
+  }
+  .page-404__head,
+  .about__head     {
+  padding: 10px; 
+  font-size: 20px;
+  font-weight: 500;  
+  }
+  .about__title {
+  margin-bottom: 10px;  
+  font-size: 17px;  
+  line-height: 18px;
+  }
+  .about__text {
+    line-height: 20px;
+  }
+  .breadcrumbs__inner {
+    padding: 17px 0px 17px;
 }
-// .search__inner {  
-//   padding: 70px 0px 40px;  
-// }
-// .search__inner-title {
-//   margin-bottom: 20px;
-//   font-size: 36px;
-//   line-height: 36px;  
-// }
+.contact__form-row {
+  flex-direction:column;
+}
+.contact__form {
+  input {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
+.contact__info-item {
+  margin-bottom: 10px;
+}
+.contact__form-title {
+  margin-bottom: 15px; 
+  font-size: 20px;  
+}
+.contact__info-title::after {  
+  left: 30px;
+}
+.contact__info-content {
+  padding-left: 30px;
+}
+.contact__info-item {
+  margin-bottom: 10px;
+}
+
+}
